# kio-onedrive

./: .gitignore  CMakeLists.txt  HACKING  Makefile  Messages.sh  README.enterpriseapps.md  README.md  README.packagers  onedrive.json
autotests/: CMakeLists.txt  listtest.cpp  urltest.cpp
desktop/: CMakeLists.txt  onedrive-network.desktop  org.kde.kio_onedrive.metainfo.xml
doc/: index.docbook
kaccounts/: CMakeLists.txt  kaccountsplugin.cpp  kaccountsplugin.h  kaccountsplugin.json  microsoft.provider.in.in  onedrive.notifyrc  onedrive.provider.in.in  onedrive.service.in
po/tr/docs/kioworker6/onedrive/: CMakeLists.txt
purpose/: CMakeLists.txt  gdrivejob.cpp  onedrivejob.cpp  onedrivejob.h  purpose_gdrive.cpp  purpose_gdrive.json  purpose_gdrive_config.qml  purpose_onedrive.cpp  purpose_onedrive.json
src/: CMakeLists.txt  abstractaccountmanager.cpp  abstractaccountmanager.h  gdriveurl.cpp  kaccountsmanager.cpp  kaccountsmanager.h  kio_gdrive.cpp  kio_gdrive.h  kio_onedrive.cpp  kio_onedrive.h  kioonedrive.cpp  kioonedrive.h  onedrive_udsentry.h  onedriveaccount.h  onedriveclient.cpp  onedriveclient.h  onedriveurl.cpp  onedriveurl.h  pathcache.cpp
src/integration/contextmenuaction/: CMakeLists.txt  contextmenuaction.cpp  contextmenuaction.h  contextmenuaction.json
src/integration/propertiesplugin/: CMakeLists.txt  gdrivepropertiesplugin.cpp  onedrivepropertiesplugin.cpp  onedrivepropertiesplugin.h  onedrivepropertiesplugin.json  onedrivepropertiesplugin.ui
